<resources>
    <string name="app_name">StudentHousing</string>
    <string name="facebook_app_id">2261089020574702</string>
    <string name="fb_login_protocol_scheme">fb2261089020574702</string>
    <string name="map_api_key">AIzaSyBRUA6eCa5RfAvxGqmlOPYPrKHJMS93WHo</string>

    <string name="welcome">XIN CHÀO</string>
    <string name="desc_app">Tìm kiếm tất cả ngôi nhà phù hợp với bạn qua StudentHousing</string>
    <string name="username">Tên tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="register_user">Đăng ký tài khoản.</string>
    <string name="or">Hoặc</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="name">Họ và tên</string>
    <string name="phone">Số điện thoại</string>
    <string name="back">Quay lại</string>
    <string name="all_houses">Danh sách nhà</string>
    <string name="favorite">Danh sách yêu thích</string>
    <string name="sort">Sắp xếp</string>
    <string name="info">Thông tin cá nhân</string>
    <string name="uploaded">Bài đã đăng</string>
    <string name="history">Lịch sử</string>
    <string name="schedule">Lịch hẹn</string>
    <string name="address">Địa chỉ</string>
    <string name="no_email">Không có email</string>
    <string name="basic_info">Thông tin cơ bản</string>
    <string name="price">Giá</string>
    <string name="acreage">Diện tích</string>
    <string name="object">Đối tượng thuê</string>
    <string name="max_people">Số người</string>
    <string name="strong_info">Thông tin chi tiết</string>
    <string name="insert_info">Bạn phải nhập đủ thông tin.</string>
    <string name="confirm_pass_fail">Mật khẩu bạn nhập chưa khớp.</string>
    <string name="user_exists">Tài khoản đã tồn tại.</string>
    <string name="register_fail">Đăng ký thất bại.</string>
    <string name="success">Thành công.</string>
    <string name="fail">Thất bại.</string>
    <string name="no_phone">Chưa cập nhật số điện thoại.</string>
    <string name="please_login">Bạn cần đăng nhập để thực hiện chức năng này.</string>
    <string name="million">Triệu</string>
    <string name="meter2">m2</string>
    <string name="logout">Đăng xuất</string>
    <string name="object_male">Đối tượng thuê: nam</string>
    <string name="object_female">Đối tượng thuê: nữ</string>
    <string name="object_both">Đối tượng thuê: nam và nữ</string>
    <string name="million_per_month">Triệu/tháng</string>
    <string name="post">Bài đăng</string>
    <string name="user">Người dùng</string>
    <string name="setting">Cài đặt</string>
    <string name="about">About</string>
    <string name="manager">Quản lý</string>
    <string name="load_data">Đang tải dữ liệu</string>
    <string name="turn_down">Giảm dần</string>
    <string name="turn_up">Tăng dần</string>
    <string name="cancel">Thoát</string>
    <string name="ok">Ok</string>
    <string name="from">Từ</string>
    <string name="to">Đến</string>
    <string name="search">Tìm kiếm</string>
    <string name="zero_million">0 Triệu</string>
    <string name="zero_m2">0 m2</string>
    <string name="search_option">Tìm kiếm nâng cao</string>
    <string name="register_poster">Đăng ký đăng bài</string>
    <string name="need_permission">Bạn phải trở thành người đăng bài mới sử dụng được mục này.</string>
    <string name="verify_register_poster">Bạn muốn đăng ký thành người đăng bài?</string>
    <string name="confirm">Xác nhận</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="verify_exists">Yêu cầu của bạn đã được gửi, vui lòng chờ BQT phê duyệt.</string>
    <string name="verify_success">Gửi yêu cầu đăng ký thành công.</string>
    <string name="verify_fail">Gửi yêu cầu đăng ký thất bại.</string>
    <string name="add_post">Tạo bài đăng</string>
    <string name="title">Tiêu đề</string>
    <string name="street">Đường</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="both">Cả hai</string>
    <string name="people">Người</string>
    <string name="browser">Duyệt</string>
    <string name="create">Tạo</string>
    <string name="insert_image">Bạn cần thêm ít nhất một ảnh.</string>
    <string name="verify_create_post">Bài viết của bạn đã được gửi, vui lòng chờ BQT phê duyệt.</string>
    <string name="accept">Phê duyệt</string>
    <string name="denied">Loại bỏ</string>
    <string name="user_register_poster">Người dùng đăng ký đăng bài</string>
    <string name="post_is_requesting">Bài đăng chờ phê duyệt</string>
    <string name="radius">Bán kính(m)...</string>
    <string name="location">Địa điểm...</string>
    <string name="photo">Hình ảnh</string>
    <string name="comment">Bình luận</string>
    <string name="map">Bản đồ</string>
    <string name="list_comment">Danh sách bình luận</string>
    <string name="enter_ccomment">Nhập bình luận của bạn...</string>
    <string name="add_favorite_success">Bạn đã thêm mục này vào danh mục yêu thích.</string>
    <string name="remove_favorite_success">Bạn đã xóa mục này khỏi danh mục yêu thích.</string>
    <string name="noti_poster">Bạn hiện đã là người đăng bài.</string>
    <string name="edit">Sửa</string>
    <string name="state_two">Trạng thái</string>
    <string name="booking_checked">Đẵ đặt</string>
    <string name="delete">Xóa</string>
    <string name="state">Trạng thái:</string>
    <string name="booked">Đã có người đăng ký</string>
    <string name="un_book">Còn trống</string>
    <string name="someone_has_put">Đã có người đăng ký phòng trọ này.</string>
    <string name="edit_info">Sửa bài đăng</string>
    <string name="book_success">Đăng ký phòng thành công.</string>
    <string name="book_fail">Đăng ký phòng thất bại.</string>
    <string name="you_cant_book_this_post_because_you_are_poster">Bạn không thể đăng ký phòng này vì bạn là người đăng bài.</string>
    <string name="book_room">Bạn muốn đăng ký phòng trọ này?</string>
    <string name="list_booked">Phòng trọ đã đăng ký</string>
    <string name="list_people_booked">Người đăng ký</string>
    <string name="delete_this_book">Bạn muốn hủy đăng ký này?</string>
    <string name="registered">đã đăng ký phòng trọ</string>
    <string name="list_booking">Danh sách đăng ký phòng</string>
    <string name="history_booking">Lịch sử đăng ký</string>
    <string name="new_booking">Một người dùng vừa đăng ký đặt phòng của bạn.</string>
</resources>
