<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.example.quang.studenthousing.object.CustomTextBold
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:text="@string/sort"
                android:textColor="@color/white"
                style="?android:attr/textAppearanceLarge"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RadioGroup
            android:gravity="center"
            android:id="@+id/groupTypeSort"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:checked="true"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:id="@+id/radPrice"
                style="?android:attr/textAppearanceMedium"
                android:text="@string/price"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:checked="false"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:id="@+id/radAcreage"
                style="?android:attr/textAppearanceMedium"
                android:text="@string/acreage"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/groupStyleSort"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:checked="true"
                android:padding="10dp"
                android:id="@+id/radTurnDown"
                style="?android:attr/textAppearanceMedium"
                android:text="@string/turn_down"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:checked="false"
                android:padding="10dp"
                android:id="@+id/radTurnUp"
                style="?android:attr/textAppearanceMedium"
                android:text="@string/turn_up"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.example.quang.studenthousing.object.CustomTextView
                android:textColor="@color/white"
                android:layout_weight="1"
                android:padding="10dp"
                android:id="@+id/tvCancelDialog"
                android:gravity="center"
                android:text="@string/cancel"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.example.quang.studenthousing.object.CustomTextView
                android:textColor="@color/white"
                android:layout_weight="1"
                android:padding="10dp"
                android:id="@+id/tvDoneDialog"
                android:gravity="center"
                android:text="@string/ok"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>