<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.example.quang.studenthousing.object.CustomTextItalic
                android:layout_width="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:layout_marginTop="40dp"
                android:id="@+id/tvRegister"
                android:layout_gravity="center_horizontal"
                android:textSize="45sp"
                android:textColor="@color/white"
                style="?android:attr/textAppearanceLarge"
                android:layout_height="wrap_content" />

            <com.example.quang.studenthousing.object.CustomEditText
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:id="@+id/edtUserNameRegister"
                android:drawableLeft="@drawable/icon_user"
                android:drawablePadding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/edt_background_border"
                android:hint="@string/username"/>

            <com.example.quang.studenthousing.object.CustomEditText
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:id="@+id/edtPasswordRegister"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textPassword"
                android:background="@drawable/edt_background_border"
                android:hint="@string/password"/>

            <com.example.quang.studenthousing.object.CustomEditText
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:id="@+id/edtConfirmPasswordRegister"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textPassword"
                android:background="@drawable/edt_background_border"
                android:hint="@string/confirm_password"/>

            <com.example.quang.studenthousing.object.CustomEditText
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:id="@+id/edtNameRegister"
                android:drawableLeft="@drawable/icon_name"
                android:drawablePadding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="text"
                android:background="@drawable/edt_background_border"
                android:hint="@string/name"/>

            <com.example.quang.studenthousing.object.CustomEditText
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:id="@+id/edtPhoneRegister"
                android:drawableLeft="@drawable/icon_phone"
                android:drawablePadding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="number"
                android:background="@drawable/edt_background_border"
                android:hint="@string/phone"/>

            <Button
                style="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:text="@string/register"
                android:layout_below="@id/lnEdt"
                android:layout_marginTop="40dp"
                android:id="@+id/btnRegister"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_background_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginBottom="40dp"
                style="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:text="@string/back"
                android:layout_below="@id/lnEdt"
                android:layout_marginTop="10dp"
                android:id="@+id/btnBackRegister"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_background_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>